# Caffe2ComputeModules

./: .gitignore  CMakeLists.txt  LICENSE
modules/: FindCaffe2.cmake
networkDefinitions/: test_net.pbtxt
src/executables/trainSineWave/: main.cpp
src/executables/unitTests/: main.cpp
tutorialCodeAndNetworkDefinitions/: deploy_net.pbtxt  test_init_net.pbtxt  train_init_net.pbtxt  train_net.pbtxt
